third_party/rust/cxx/v1/crate/tests/ui/derive_duplicate.rs
#[cxx::bridge]
mod ffi {
    #[derive(Clone, Clone)]
    struct Struct {
        x: usize,
    }
}

fn main() {}
